
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ kern_return_t ;
typedef scalar_t__ io_service_t ;
typedef int io_connect_t ;


 int CFSTR (char*) ;
 scalar_t__ IORegistryEntrySetCFProperty (scalar_t__,int ,int ) ;
 scalar_t__ IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 scalar_t__ IOServiceOpen (scalar_t__,int ,int ,int*) ;
 scalar_t__ IO_OBJECT_NULL ;
 scalar_t__ KERN_SUCCESS ;
 int MACH_PORT_NULL ;
 int kIOMasterPortDefault ;
 int mach_task_self () ;
 int printf (char*,...) ;

int main(){
  io_service_t service = IOServiceGetMatchingService(kIOMasterPortDefault, IOServiceMatching("AppleBroadcomBluetoothHostController"));

  if (service == IO_OBJECT_NULL){
    printf("unable to find service\n");
    return 1;
  }
  printf("got service: %x\n", service);


 kern_return_t err;
 err = IORegistryEntrySetCFProperty(
  service,
  CFSTR("IOUserClientClass"),
  CFSTR("IGAccelSharedUserClient"));

 if (err != KERN_SUCCESS){
  printf("setProperty failed\n");
 } else {
  printf("set the property!!\n");
  }


  io_connect_t conn = MACH_PORT_NULL;
  err = IOServiceOpen(service, mach_task_self(), 0, &conn);
  if (err != KERN_SUCCESS){
   printf("unable to get user client connection\n");
   return 1;
  }

  printf("got userclient connection: %x\n", conn);

  return 0;
}
